--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 osx_image: xcode10
 language: swift
-xcode_sdk: iphonesimulator11.3
-xcode_project: HabrExample/HabrExample.xcworkspace
+xcode_project: HabrExample/HabrExample.xcodeproj
 xcode_scheme: HabrExample
-xcode_destination: platform=iOS Simulator,OS=11,name=iPhone X
-after_success:
-        - bash <(curl -s https://codecov.io/bash)
+xcode_destination: platform=iOS Simulator,OS=12.0,name=iPhone 7
+after_success: - bash <(curl -s https://codecov.io/bash)
